plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.pg'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

// 관리자 SPA(site/)를 classpath 정적 리소스에 포함 → /login.html, /index.html 등이 JAR에서 직접 서빙됨
// (api.icopay.co.kr 이 Nginx로 8080 전체 프록시될 때 Apache 403 없이 동작)
processResources {
    from("${rootDir}/../site") {
        into 'static'
        exclude 'README.md', 'README-로컬개발.txt', 'FTP_업로드_경로.txt'
        exclude '로컬 서버 실행.bat', 'menu-test.html'
        exclude '**/screens_original.js'
    }
}
